# insm_brasil

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  STORYTELLING.md  STORYTELLING_EN.md  pyproject.toml
.github/workflows/: ci.yml
pipeline/: download.py  transform.py
src/dashboard/: app.py
src/download/: car.py  ibge.py  inep.py  inpe.py  mapbiomas.py  siconfi.py
src/feature_engineering/: indicators.py
src/models/: index_builder.py  trainer.py
src/preprocessing/: cleaner.py
src/utils/: config.py  geocodes.py  http.py  logger.py
src/visualization/: charts.py
tests/: test_index.py  test_preprocessing.py
