[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insm-brasil"
version = "1.0.0"
description = "Ranking Nacional de Sustentabilidade dos Municípios Brasileiros"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sustainability Research Team" }]

dependencies = [
    # Data engineering
    "pandas>=2.1.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.10.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    # Geospatial
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "pyproj>=3.6.0",
    "folium>=0.15.0",
    "branca>=0.7.0",
    # Statistics & ML
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.2.0",
    "catboost>=1.2.0",
    "optuna>=3.5.0",
    "shap>=0.44.0",
    # Visualization
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "kaleido>=0.2.1",
    # Dashboard
    "streamlit>=1.31.0",
    "streamlit-folium>=0.17.0",
    # PDF export
    "reportlab>=4.0.0",
    "weasyprint>=61.0",
    # Code quality
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.1.0",
]

[project.scripts]
sustainability = "src.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src"]
